refs #254 - date problem reproduced in test